<resources>
    <string name="app_name">TopQuizz</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="Welcome_Message">Welcome! What\'s your name?</string>
    <string name="Type_your_name">Please type your name</string>
    <string name="let_s_play">Let\'s play</string>
    <string name="WelcomeBack">Welcome back, </string>
    <string name="LastScoreWas">Your last score was </string>
    <string name="WillDoBetter">,will you do better this time ?</string>


    <string name="AndroidCreator">Who is the creator of Android?</string>

    <string name="MoonLanding">When did the first man land on the moon?</string>
    <string name="SimpsonsNumber">What is the house number of The Simpsons?</string>

    <string name="BestScore">Best Score</string>
    <string name="JokerButton">Jocker Button</string>

    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="topquizzlogo" translatable="false">TopQuizzLogo</string>
    <string name="register_a_new_account">Register a new account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="log_into_your_account">Log into your account</string>
    <string name="main_menu">Main menu</string>
    <string name="player_name_placeholder">Welcome : </string>
    <string name="your_current_score_is_0">Your current score is : </string>
    <string name="leaderboard">Leaderboard</string>
    <string name="start">START</string>
    <string name="correct">Correct !</string>
    <string name="incorrect">Incorrect !</string>
    <string name="timeout">Timeout !</string>
    <string name="well_done">Well done!</string>
    <string name="Come_and_play">Come and play ! You can do it !</string>


</resources>